--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "@nestjs/platform-express": "^7.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "tv4": "^1.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
@@ -36,6 +37,7 @@
     "@types/jest": "25.2.3",
     "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
+    "@types/tv4": "^1.2.29",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "3.0.2",
     "eslint": "7.1.0",
