--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "^3.7.5"
   },
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "@types/chart.js": "^2.9.22"
+    "@types/chart.js": "^2.9.22",
+    "@types/react-router-dom": "^5.1.5"
   }
 }
