--- a/docker/production/proxy/nginx.conf
+++ b/docker/production/proxy/nginx.conf
@@ -13,7 +13,7 @@ server {
     ssl_certificate_key /keys/nginx.key;
 
     location / {
-        proxy_pass climbing_client:80/;
+        proxy_pass https://climbing_client:80;
 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -24,7 +24,7 @@ server {
     }
 
     location /api {
-        proxy_pass climbing_server:80;
+        proxy_pass https://climbing_server:80;
 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
