--- a/docker/production/client/nginx.conf
+++ b/docker/production/client/nginx.conf
@@ -7,7 +7,7 @@ gzip_types text/plain text/css text/xml text/javascript application/json applica
 charset utf-8;
 
 server {
-    listen 80 ssl;
+    listen 80 ssl http2;
 
     root /usr/src/app/;
 
@@ -16,6 +16,6 @@ server {
 
     location / {
         index index.html;
-        alias /usr/src/app;
+        try_files $uri $uri/ =404;
     }
 }
