--- a/docker/production/proxy/Dockerfile
+++ b/docker/production/proxy/Dockerfile
@@ -4,7 +4,7 @@ FROM nginx:stable-alpine
 RUN rm /etc/nginx/conf.d/default.conf
 
 # Copy the nginx config
-COPY nginx.conf /etc/nginx/conf.d/
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 
 # Install openssl
