--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --tab-width 4 --print-width 121 --no-bracket-spacing --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "ENVIRONMENT=production nest start",
+    "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
