--- a/docker/production/client/nginx.conf
+++ b/docker/production/client/nginx.conf
@@ -7,15 +7,26 @@ gzip_types text/plain text/css text/xml text/javascript application/json applica
 charset utf-8;
 
 server {
-    listen 80 ssl http2;
+    listen 80 default_server;
 
-    root /usr/src/app/;
+    server_name _;
+
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl http2 default_server;
+    listen [::]:443 ssl http2;
 
     ssl_certificate /keys/nginx.crt;
     ssl_certificate_key /keys/nginx.key;
+    
+    root /usr/src/app/;
+
+
+   index index.html index.htm;
 
     location / {
-        index index.html;
-        try_files $uri $uri/ =404;
+       try_files $uri /index.html =404;
     }
 }
