--- a/docker/production/proxy/nginx.conf
+++ b/docker/production/proxy/nginx.conf
@@ -7,13 +7,22 @@ gzip_types text/plain text/css text/xml text/javascript application/json applica
 charset utf-8;
 
 server {
-    listen 80 ssl;
+    listen 80 default_server;
+
+    server_name _;
+
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl http2 default_server;
+    listen [::]:443 ssl http2;
 
     ssl_certificate /keys/nginx.crt;
     ssl_certificate_key /keys/nginx.key;
 
     location / {
-        proxy_pass https://climbing_client:80;
+        proxy_pass https://climbing_client:443;
 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -24,7 +33,7 @@ server {
     }
 
     location /api {
-        proxy_pass https://climbing_server:80;
+        proxy_pass https://climbing_server:443;
 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
